<resources>
    <string name="app_name">HiTech</string>

    <string name="cover_heading">Mobile</string>
    <string name="cover_login_tv">Login</string>
    <string name="cover_error_tv">Error</string>
    <string name="cover_login_username_et">Username</string>
    <string name="cover_login_passwd_et">Password</string>
    <string name="cover_login_btn">Sign In</string>
    <string name="cover_newCreateAccount_btn">Create New Account</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_register_account">Account Registration</string>
    <string name="registration_heading">User Registration</string>
    <string name="registration_name">Name</string>
    <string name="registration_username">Username</string>
    <string name="registration_passwd">Password</string>
    <string name="registration_mobile">Mobile</string>
    <string name="registration_emailId">Email Id</string>
    <string name="registration_address">Address</string>
    <string name="registration_post">Post</string>
    <string name="registration_type">Type</string>
    <string-array name="registration_type">
        <item>Staff</item>
        <item>Customer</item>
    </string-array>
    <string name="registration_error">Error</string>
    <string name="registration_register_btn">Register</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_entry">User Activity Entry</string>
    <string name="entry_welcomeUser_tv">Welcome...</string>
    <string name="entry_heading">Activity Entry</string>
    <string name="entry_id">Id</string>
    <string name="entry_activityType">Activity Type</string>
    <string-array name="entry_activityType">
        <item>Support</item>
        <item>Marketing</item>
        <item>Visit</item>
    </string-array>
    <string name="entry_dateTime">Date/Time</string>
    <string name="entry_location">Location</string>
    <string name="entry_address">Address</string>
    <string name="entry_feedback">Feedback</string>
    <string-array name="entry_feedback">
        <item>Solved</item>
        <item>Unsolved</item>
        <item>In Progress</item>
    </string-array>
    <string name="entry_remarks">Remarks</string>
    <string name="entry_enterActivity_btn">Enter Activity</string>

    <string name="title_activity_report">User Report</string>
    <string name="report_userOnline_tv">User Online</string>
    <string name="report_heading">Choose Report</string>
    <string name="report_back">Back</string>
    <string name="report_activityType">Activity Type</string>
    <string-array name="report_activityType">
        <item>Support</item>
        <item>Marketing</item>
        <item>Visit</item>
    </string-array>
    <string name="report_feedback">Feedback</string>
    <string-array name="report_feedback">
        <item>Solved</item>
        <item>Unsolved</item>
        <item>In Progress</item>
    </string-array>
    <string name="report_listReportByDate">Feedback</string>

    <string name="title_activity_report_from_date">Report From Date Activity</string>
    <string name="reportFromDate_userOnline_tv">User Online</string>
    <string name="reportFromDate_heading">Report</string>
    <string name="reportFromDate_back">Back</string>
    <string name="reportFromDate_date">Date</string>
    <string name="reportFromDate_dateGet">Date Get</string>
    <string name="reportFromDate_location">Location</string>
    <string name="reportFromDate_locationGet">Location Get</string>
    <string name="reportFromDate_actType">Type</string>
    <string name="reportFromDate_actTypeGet">Type Get</string>
    <string name="reportFromDate_feedback">Feedback</string>
    <string name="reportFromDate_feedbackGet">Feedback Get</string>
    <string name="reportFromDate_address">Address</string>
    <string name="reportFromDate_addressGet">Address Get</string>
    <string name="reportFromDate_remarks">Remarks</string>
    <string name="reportFromDate_remarksGet">Remarks Get</string>

</resources>
