<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.practice.hitech.RegisterAccountActivity">

    <TextView
        android:text="@string/registration_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration_heading"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:hint="@string/registration_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_heading"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_name"
        android:textSize="20dp"
        />

    <EditText
        android:hint="@string/registration_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_name"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_username"
        android:textSize="20dp"
        />

    <EditText
        android:hint="@string/registration_passwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_username"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_passwd"
        android:password="true"
        android:textSize="20dp"/>

    <EditText
        android:hint="@string/registration_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_passwd"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_mobile"
        android:textSize="20dp"
        />

    <EditText
        android:hint="@string/registration_emailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_mobile"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_emailId"
        android:textSize="20dp"
        />

    <EditText
        android:hint="@string/registration_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_emailId"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_address"
        android:textSize="20dp"
        />

    <EditText
        android:hint="@string/registration_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_address"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_post"
        android:textSize="20dp"
        />

    <Spinner
        android:hint="@string/registration_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_post"
        android:layout_alignParentLeft="true"
        android:id="@+id/registration_type"
        android:entries="@array/registration_type"
        android:layout_marginLeft="5dp"
        android:visibility="invisible"
        />

    <TextView
        android:text="@string/registration_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_type"
        android:id="@+id/registration_error"
        android:textSize="@dimen/abc_text_size_small_material"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:textColor="@color/errorColor"
        android:visibility="invisible"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_register_btn"
        android:layout_alignParentBottom="true"
        android:text="@string/registration_register_btn"
        android:onClick="onClickRegisterUser"
        />

</RelativeLayout>
