<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.practice.hitech.EntryActivityActivity">

    <TextView
        android:id="@+id/entry_welcomeUser_tv"
        android:text="@string/entry_welcomeUser_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:text="@string/entry_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entry_heading"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_below="@+id/entry_welcomeUser_tv"
        />

    <!--<TextView-->
    <!--android:text="@string/entry_heading"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/entry_heading"-->
    <!--android:textSize="@dimen/abc_text_size_headline_material"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--/>-->

    <TextView
        android:text="@string/entry_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_heading"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_id"
        android:textSize="-20dp"
        android:layout_marginLeft="5dp"
        android:visibility="invisible"
        />

    <TextView
        android:text="@string/entry_dateTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_id"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dp"
        android:id="@+id/entry_dateTime"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:text="@string/entry_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_dateTime"
        android:layout_marginTop="12dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_location"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"/>

    <Spinner
        android:text="@string/entry_activityType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_location"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_activityType"
        android:entries="@array/entry_activityType"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        />

    <Spinner
        android:text="@string/entry_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_activityType"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_feedback"
        android:entries="@array/entry_feedback"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:hint="@string/entry_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_feedback"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_address"
        android:textSize="20dp"/>

    <EditText
        android:hint="@string/entry_remarks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_address"
        android:layout_alignParentLeft="true"
        android:id="@+id/entry_remarks"
        android:textSize="20dp"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entry_enterActivity_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/entry_enterActivity_btn"
        android:onClick="onClickEnterActivity"
        />
</RelativeLayout>
